--- a/ctouch_fixed/manifest.json
+++ b/ctouch_fixed/manifest.json
@@ -1,9 +1,10 @@
 {
 	"name": "cTouch r2 (config fixed)",
 	"description": "You can browse smartphone websites.",
-	"version": "1.5.7.20628",
+	"version": "1.5.8.20703",
 	"manifest_version": 2,
 	"update_url": "http://ctouch.googlecode.com/hg/updates.xml",
+	"homepage_url": "https://code.google.com/p/ctouch/",
 	"background": {
 		"scripts": ["ctouch_bg.js"]
 	},
