--- a/ctouch.safariextension/Info.plist
+++ b/ctouch.safariextension/Info.plist
@@ -5,13 +5,13 @@
 	<key>Author</key>
 	<string>ciel</string>
 	<key>CFBundleDisplayName</key>
-	<string>cTouch (safari/less)</string>
+	<string>cTouch (Safari/browserUA)</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.cielavenir.ctouch</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
-	<key>CFBundleShortVersionString</key><string>1.5.8.20703</string>
-	<key>CFBundleVersion</key><string>1.5.8.20703</string>
+	<key>CFBundleShortVersionString</key><string>1.5.9.20706</string>
+	<key>CFBundleVersion</key><string>1.5.9.20706</string>
 	<key>Chrome</key>
 	<dict/>
 	<key>Content</key>
