--- a/ctouch_browserua/manifest.json
+++ b/ctouch_browserua/manifest.json
@@ -1,26 +1,13 @@
 {
-	"name": "cTouch r2 (standard)",
-	"description": "You can browse smartphone websites.",
+	"name": "cTouch r2 (browserUA)",
+	"description": "You can browse smartphone websites. No configuration screens; command line --user-agent value is used.",
 	"version": "1.5.9.20706",
-	"manifest_version": 2,
 	"update_url": "http://ctouch.googlecode.com/hg/updates.xml",
 	"homepage_url": "https://code.google.com/p/ctouch/",
-	"background": {
-		"scripts": ["ctouch_bg.js"]
-	},
-	"permissions": [
-		"webRequest",
-		"webRequestBlocking",
-		"<all_urls>"
-	],
-	"browser_action": {
-		"default_icon": "icon16.png",
-		"default_popup": "ctouch_popup.html"
-	},
 	"content_scripts": [
 	{
 		"all_frames": true,
-		"js": ["ctouch_loadconf.js","ctouch_bootstrap.js","ctouch_touch.js"],
+		"js": ["ctouch_bootstrap.js","ctouch_touch.js"],
 		"matches": ["<all_urls>"],
 		"run_at": "document_start"
 	},
