--- a/ctouch_fixed/manifest.json
+++ b/ctouch_fixed/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name": "cTouch r2 (config fixed)",
-	"description": "You can browse smartphone websites.",
-	"version": "1.5.8.20703",
+	"description": "You can browse smartphone websites. No configuration screens; UserAgent is fixed.",
+	"version": "1.5.9.20706",
 	"manifest_version": 2,
 	"update_url": "http://ctouch.googlecode.com/hg/updates.xml",
 	"homepage_url": "https://code.google.com/p/ctouch/",
