--- a/ctouch_standard/manifest.json
+++ b/ctouch_standard/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "cTouch r2 (standard)",
-	"description": "You can browse smartphone websites.",
+	"description": "You can browse smartphone websites. Configuration is saved to background localStorage; loading is asynchronous.",
 	"version": "1.5.9.20706",
 	"manifest_version": 2,
 	"update_url": "http://ctouch.googlecode.com/hg/updates.xml",
