--- a/ctouch_browserua/manifest.json
+++ b/ctouch_browserua/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "cTouch r2 (browserUA)",
-	"description": "You can browse smartphone websites. No configuration screens; command line --user-agent value is used.",
+	"description": "You can browse smartphone websites. No configuration screens; command line --user-agent value is used. In that way this works even on very old Chromium.",
 	"version": "1.5.9.20706",
 	"update_url": "http://ctouch.googlecode.com/hg/updates.xml",
 	"homepage_url": "https://code.google.com/p/ctouch/",
