--- a/updates.plist
+++ b/updates.plist
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist version="1.0">
+<?xml version='1.0' encoding='UTF-8'?>
+<!DOCTYPE plist PUBLIC '-//Apple//DTD PLIST 1.0//EN' 'http://www.apple.com/DTDs/PropertyList-1.0.dtd'>
+<plist version='1.0'>
 <dict>
 <key>Extension Updates</key>
 <array>
@@ -10,11 +10,11 @@
 		<key>Developer Identifier</key>
 		<string>ZMS86BA3S8</string>
 		<key>CFBundleVersion</key>
-		<string>1.6.5.20727</string>
+		<string>1.7.0.20810</string>
 		<key>CFBundleShortVersionString</key>
-		<string>1.6.5.20727</string>
+		<string>1.7.0.20810</string>
 		<key>URL</key>
-		<string>https://ctouch.googlecode.com/files/ctouch-1.6.5.20727.safariextz</string>
+		<string>https://ctouch.googlecode.com/files/ctouch-1.7.0.20810.safariextz</string>
 	</dict>
 </array>
 </dict>
