--- a/ctouch_browserua/manifest.json
+++ b/ctouch_browserua/manifest.json
@@ -1,9 +1,18 @@
 {
 	"name": "cTouch r2 (browserUA)",
 	"description": "You can browse smartphone websites. No configuration screens; command line --user-agent value is used.",
-	"version": "1.8.3.20916",
+	"version": "1.8.4.20916",
+	"manifest_version": 2,
 	"update_url": "http://ctouch.googlecode.com/hg/updates.xml",
 	"homepage_url": "https://code.google.com/p/ctouch/",
+	"background": {
+		"scripts": ["ctouch_bg.js"]
+	},
+	"permissions": [
+		"webRequest",
+		"webRequestBlocking",
+		"<all_urls>"
+	],
 	"content_scripts": [
 	{
 		"all_frames": true,
