--- a/ctouch_browserua/manifest.json
+++ b/ctouch_browserua/manifest.json
@@ -2,6 +2,7 @@
 	"name": "cTouch r2 (browserUA)",
 	"description": "You can browse smartphone websites. No configuration screens; command line --user-agent value is used.",
 	"version": "1.8.5.20917",
+	"manifest_version": 2,
 	"update_url": "http://ctouch.googlecode.com/hg/updates.xml",
 	"homepage_url": "https://code.google.com/p/ctouch/",
 	"content_scripts": [
