--- a/postize/manifest.json
+++ b/postize/manifest.json
@@ -1,12 +1,12 @@
 {
 	"name": "POSTize",
 	"description": "Patch HTML form to use POST if it uses GET and has password.",
-	"version": "0.0.3.1",
-        "manifest_version": 2,
+	"version": "0.0.3.2",
+	"manifest_version": 2,
 	"content_scripts": [
 	{
 		"all_frames": true,
-		"js": ["css.js"],
+		"js": ["postize_css.js"],
 		"matches": ["<all_urls>"],
 		"run_at": "document_end"
 	}
