--- a/linksource/manifest.json
+++ b/linksource/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name": "LinkSource",
-	"description": "Add Open view-source to context menu.",
-	"version": "0.0.1",
+	"description": "Add Open link with view-source to context menu.",
+	"version": "0.0.2",
 	"manifest_version": 2,
 	"background": {
 		"scripts": ["linksource_bg.js"]
