--- a/ctouch_standard/manifest.json
+++ b/ctouch_standard/manifest.json
@@ -1,12 +1,12 @@
 {
 	"name": "cTouch r2 (standard)",
 	"description": "You can browse smartphone websites. Configuration is saved to background localStorage; loading is asynchronous.",
-	"version": "2.0.3.21213",
+	"version": "2.0.4.21213",
 	"manifest_version": 2,
 	"update_url": "http://ctouch.googlecode.com/hg/updates.xml",
 	"homepage_url": "https://code.google.com/p/ctouch/",
 	"background": {
-		"scripts": ["ctouch_bg.js"]
+		"scripts": ["ctouch_saveconfig.js","ctouch_bg.js"]
 	},
 	"permissions": [
 		"webRequest",
