--- a/ctouch_external/manifest.json
+++ b/ctouch_external/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name": "cTouch r2 (external)",
 	"description": "You can browse smartphone websites. Configuration is saved to external CGI.",
-	"version": "2.0.5.21220",
+	"version": "2.0.6.30115",
 	"manifest_version": 2,
 	"update_url": "http://ctouch.googlecode.com/hg/updates.xml",
 	"homepage_url": "https://code.google.com/p/ctouch/",
@@ -11,6 +11,7 @@
 	"permissions": [
 		"webRequest",
 		"webRequestBlocking",
+		"management",
 		"<all_urls>"
 	],
 	"options_page": "ctouch_option.html",
