--- a/sgfaker/manifest.json
+++ b/sgfaker/manifest.json
@@ -1,8 +1,9 @@
 {
 	"name": "SGFaker",
-	"description": "SGFaker",
-	"version": "0.0.1",
+	"description": "SGFaker: allows sgviewer.com (use with cTouch)",
+	"version": "0.0.1.1",
 	"manifest_version": 2,
+	"homepage_url": "https://code.google.com/p/ctouch/",
 	"content_scripts": [
 	{
 		"all_frames": true,
