--- a/linksource/manifest.json
+++ b/linksource/manifest.json
@@ -3,6 +3,7 @@
 	"description": "Add Open link with view-source to context menu.",
 	"version": "0.0.2",
 	"manifest_version": 2,
+	"homepage_url": "https://code.google.com/p/ctouch/",
 	"background": {
 		"scripts": ["linksource_bg.js"]
 	},
