--- a/ctouch_filesystem/manifest.json
+++ b/ctouch_filesystem/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name": "cTouch r2 (filesystem)",
 	"description": "You can browse smartphone websites. Configuration is saved to HTML5 filesystem.",
-	"version": "2.1.4.30311",
+	"version": "2.1.4.30425",
 	"manifest_version": 2,
 	"update_url": "http://ctouch.googlecode.com/hg/updates.xml",
 	"homepage_url": "https://code.google.com/p/ctouch/",
@@ -9,6 +9,7 @@
 		"scripts": ["ctouch_saveconfig.js","ctouch_bg.js"]
 	},
 	"permissions": [
+		"tabs",
 		"webRequest",
 		"webRequestBlocking",
 		"unlimitedStorage",
