--- a/ctouch.safariextension/Info.plist
+++ b/ctouch.safariextension/Info.plist
@@ -12,10 +12,8 @@
 	<string>com.cielavenir.ctouch</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
-	<key>CFBundleShortVersionString</key>
-	<string>2.5.0.30727</string>
-	<key>CFBundleVersion</key>
-	<string>2.5.0.30727</string>
+	<key>CFBundleShortVersionString</key><string>2.5.1.30805</string>
+	<key>CFBundleVersion</key><string>2.5.1.30805</string>
 	<key>Chrome</key>
 	<dict/>
 	<key>Content</key>
