--- a/.hgignore
+++ b/.hgignore
@@ -2,6 +2,7 @@ syntax: glob
 bin/*
 pem/*.pem
 pem/*.der
+ctouch_firefox/*.xpi
 unpassword_firefox/*.xpi
 unpassword_firefox/packages/menuitems
 unpassword_firefox/packages/vold-utils
