--- a/updates.plist
+++ b/updates.plist
@@ -10,11 +10,11 @@
 		<key>Developer Identifier</key>
 		<string>ZMS86BA3S8</string>
 		<key>CFBundleVersion</key>
-		<string>2.5.3.40119</string>
+		<string>2.5.5.40908</string>
 		<key>CFBundleShortVersionString</key>
-		<string>2.5.3.40119</string>
+		<string>2.5.5.40908</string>
 		<key>URL</key>
-		<string>https://ctouch.googlecode.com/files/ctouch-2.5.3.40119.safariextz</string>
+		<string>https://sourceforge.net/projects/ctouch/files/2.5.5.40908/ctouch.safariextz</string>
 	</dict>
 </array>
 </dict>
