--- a/updates.plist
+++ b/updates.plist
@@ -14,7 +14,7 @@
 		<key>CFBundleShortVersionString</key>
 		<string>2.5.5.40908</string>
 		<key>URL</key>
-		<string>https://sourceforge.net/projects/ctouch/files/2.5.5.40908/ctouch.safariextz</string>
+		<string>http://master.dl.sourceforge.net/project/ctouch/files/2.5.5.40908/ctouch.safariextz</string>
 	</dict>
 </array>
 </dict>
