--- a/ctouch_firefox/package.json
+++ b/ctouch_firefox/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "ctouch_r3",
-	"title": "cTouch r3",
+	"name": "ctouch_firefox",
+	"title": "cTouch r4",
 	"id": "ctouch@com.cielavenir",
 	"description": "You can browse smartphone websites.",
 	"homepage": "https://code.google.com/p/ctouch/",
