--- a/codeiqdiswriter/manifest.json
+++ b/codeiqdiswriter/manifest.json
@@ -3,7 +3,7 @@
       "description": "Relax CodeIQ's GitHub OAuth2 permission from scope=user to scope=user:email.",
 	"version": "0.0.0.1",
 	"manifest_version": 2,
-	"homepage_url": "https://code.google.com/p/ctouch/",
+	"homepage_url": "https://github.com/cielavenir/ctouch/",
 	"background": {
 		"scripts": ["codeiqdiswriter.user.js"]
 	},
