--- a/codeiqformerback/manifest.json
+++ b/codeiqformerback/manifest.json
@@ -3,7 +3,7 @@
       "description": "Open old feedback link.",
 	"version": "0.0.0.1",
 	"manifest_version": 2,
-	"homepage_url": "https://code.google.com/p/ctouch/",
+	"homepage_url": "https://github.com/cielavenir/ctouch/",
 	"background": {
 		"scripts": ["codeiqformerback.user.js"]
 	},
