--- a/ctouch_true/manifest.json
+++ b/ctouch_true/manifest.json
@@ -1,10 +1,10 @@
 {
 	"name": "cTouch r4 (true)",
 	"description": "You can browse smartphone websites. Communication with background is completely synchronous.",
-	"version": "2.5.5.40908",
+	"version": "2.5.6.50511",
 	"manifest_version": 2,
-	"update_url": "https://sourceforge.net/p/ctouch/code/ci/default/tree/updates.xml?format=raw",
-	"homepage_url": "https://code.google.com/p/ctouch/",
+	"update_url": "https://raw.githubusercontent.com/cielavenir/ctouch/master/updates.xml",
+	"homepage_url": "https://github.com/cielavenir/ctouch/",
 	"background": {
 		"scripts": ["ctouch_saveconfig.js","ctouch_bg.js","ctouch_bg_tab.js"]
 	},
