--- a/firefoxz/manifest.json
+++ b/firefoxz/manifest.json
@@ -3,7 +3,7 @@
 	"description": "ゆうやけこやけというTRPGでは普通の人間に変身するには亜人状態よりも多くのコストがかかる。それと似たようなことさ。(cTouchと併用して使うべし)",
 	"version": "0.0.2",
 	"manifest_version": 2,
-	"homepage_url": "https://code.google.com/p/ctouch/",
+	"homepage_url": "https://github.com/cielavenir/ctouch/",
 	"content_scripts": [
 	{
 		"all_frames": true,
