--- a/postize.safariextension/Info.plist
+++ b/postize.safariextension/Info.plist
@@ -39,6 +39,6 @@
 		</dict>
 	</dict>
 	<key>Website</key>
-	<string>https://code.google.com/p/ctouch/</string>
+	<string>https://github.com/cielavenir/ctouch/</string>
 </dict>
 </plist>
