--- a/postize/manifest.json
+++ b/postize/manifest.json
@@ -3,7 +3,7 @@
 	"description": "Patch HTML form to use POST if it uses GET and has password.",
 	"version": "0.0.3.3",
 	"manifest_version": 2,
-	"homepage_url": "https://code.google.com/p/ctouch/",
+	"homepage_url": "https://github.com/cielavenir/ctouch/",
 	"content_scripts": [
 	{
 		"all_frames": true,
