--- a/qiita_ciel_tools/manifest.json
+++ b/qiita_ciel_tools/manifest.json
@@ -3,7 +3,7 @@
 	"description": "Patch some of Qiita website",
 	"version": "0.0.1.1",
 	"manifest_version": 2,
-	"homepage_url": "https://code.google.com/p/ctouch/",
+	"homepage_url": "https://github.com/cielavenir/ctouch/",
 	"background": {
 		"scripts": ["bg.js"]
 	},
