--- a/undisposition/manifest.json
+++ b/undisposition/manifest.json
@@ -3,7 +3,7 @@
 	"description": "Remove Content-Disposition: attachment HTTP header.",
 	"version": "0.0.1",
 	"manifest_version": 2,
-	"homepage_url": "https://code.google.com/p/ctouch/",
+	"homepage_url": "https://github.com/cielavenir/ctouch/",
 	"background": {
 		"scripts": ["undisposition_bg.js"]
 	},
