--- a/unpassword_firefox/package.json
+++ b/unpassword_firefox/package.json
@@ -3,7 +3,7 @@
 	"title": "Unpassword",
 	"id": "unpassword@com.cielavenir",
 	"description": "Patch input password to text.",
-	"homepage": "https://code.google.com/p/ctouch/",
+	"homepage": "https://github.com/cielavenir/ctouch/",
 	"author": "ciel <cielartisan@gmail.com>",
 	"lib": "lib",
 	"main": "main.js",
