--- a/ctouch_true/manifest.json
+++ b/ctouch_true/manifest.json
@@ -6,9 +6,10 @@
 	"update_url": "https://raw.githubusercontent.com/cielavenir/ctouch/master/updates.xml",
 	"homepage_url": "https://github.com/cielavenir/ctouch/",
 	"background": {
-		"scripts": ["ctouch_saveconfig.js","ctouch_bg.js","ctouch_bg_tab.js"]
+		"scripts": ["ctouch_saveconfig.js","ctouch_bg.js","ctouch_bg_bootstrap.js"]
 	},
 	"permissions": [
+		"activeTab",
 		"tabs",
 		"webRequest",
 		"webRequestBlocking",
