--- a/ctouch_chromesocket/manifest.json
+++ b/ctouch_chromesocket/manifest.json
@@ -1,4 +1,5 @@
 {
+	"author": "@cielavenir",
 	"manifest_version": 2,
 	"name": "cTouch external daemon",
 	"description": "required for cTouch (external)",
