--- a/ctouch_fixed/manifest.json
+++ b/ctouch_fixed/manifest.json
@@ -1,4 +1,5 @@
 {
+	"author": "@cielavenir",
 	"name": "cTouch r5 (config fixed)",
 	"description": "You can browse smartphone websites. No configuration screens; UserAgent is fixed.",
 	"version": "2.6.1.60829",
@@ -34,5 +35,9 @@
 		"16": "icon16.png",
 		"32": "icon32.png",
 		"48": "icon48.png"
+	},
+	"-ms-preload": {
+		"backgroundScript": "backgroundScriptsAPIBridge.js",
+		"contentScript": "contentScriptsAPIBridge.js"
 	}
 }
