--- a/ctouch_standard/manifest.json
+++ b/ctouch_standard/manifest.json
@@ -1,4 +1,5 @@
 {
+	"author": "@cielavenir",
 	"name": "cTouch r5 (standard)",
 	"description": "You can browse smartphone websites. Configuration is saved to background localStorage; loading is asynchronous.",
 	"version": "2.6.1.60829",
@@ -16,7 +17,12 @@
 	],
 	"options_page": "ctouch_option.html",
 	"browser_action": {
-		"default_icon": "icon16.png",
+		"default_icon": {
+			"128": "icon128.png",
+			"16": "icon16.png",
+			"32": "icon32.png",
+			"48": "icon48.png"
+		},
 		"default_title": "cTouch r5 (standard)",
 		"default_popup": "ctouch_popup.html"
 	},
@@ -41,5 +47,9 @@
 		"16": "icon16.png",
 		"32": "icon32.png",
 		"48": "icon48.png"
+	},
+	"-ms-preload": {
+		"backgroundScript": "backgroundScriptsAPIBridge.js",
+		"contentScript": "contentScriptsAPIBridge.js"
 	}
 }
