--- a/dragonleaguexhtmlize/manifest.json
+++ b/dragonleaguexhtmlize/manifest.json
@@ -1,4 +1,5 @@
 {
+	"author": "@cielavenir",
 	"name": "Dragon League XHTMLize",
 	"description": "ドラゴンリーグのHTMLが実際にはXHTMLであるにも関わらずContent-Typeがtext/htmlになっている不具合を、application/xhtml+xmlに書き換えて修正します",
 	"version": "0.0.0.1",
