--- a/linkis_block/manifest.json
+++ b/linkis_block/manifest.json
@@ -1,4 +1,5 @@
 {
+	"author": "@cielavenir",
 	"name": "LinkisBlock",
 	"description": "Redirects linkis.com to original website",
 	"version": "0.0.0.2",
