--- a/mplus_enabler/manifest.json
+++ b/mplus_enabler/manifest.json
@@ -1,4 +1,5 @@
 {
+	"author": "@cielavenir",
 	"name": "M+ WebFont resurrection",
 	"description": "M+ WebFont resurrection",
 	"version": "0.0.0.1",
