--- a/postize/manifest.json
+++ b/postize/manifest.json
@@ -1,4 +1,5 @@
 {
+	"author": "@cielavenir",
 	"name": "POSTize",
 	"description": "Patch HTML form to use POST if it uses GET and has password.",
 	"version": "0.0.3.3",
