--- a/redome_block/manifest.json
+++ b/redome_block/manifest.json
@@ -1,4 +1,5 @@
 {
+	"author": "@cielavenir",
 	"name": "RedomeBlock",
 	"description": "Redirects redo.me.uk to original website",
 	"version": "0.0.0.1",
