--- a/qiita_ciel_tools/manifest.json
+++ b/qiita_ciel_tools/manifest.json
@@ -6,7 +6,8 @@
 	"manifest_version": 2,
 	"homepage_url": "https://github.com/cielavenir/ctouch/",
 	"background": {
-		"scripts": ["bg.js"]
+		"scripts": ["bg.js"],
+		"persistent": true
 	},
 	"options_page": "option.html",
 	"content_scripts": [
