--- a/ctouch_true/manifest.json
+++ b/ctouch_true/manifest.json
@@ -7,7 +7,8 @@
 	"update_url": "https://raw.githubusercontent.com/cielavenir/ctouch/master/updates.xml",
 	"homepage_url": "https://github.com/cielavenir/ctouch/",
 	"background": {
-		"scripts": ["ctouch_saveconfig.js","ctouch_bg.js","ctouch_bg_bootstrap.js","ctouch_bg_css.js"]
+		"scripts": ["ctouch_saveconfig.js","ctouch_bg.js","ctouch_bg_bootstrap.js","ctouch_bg_css.js"],
+		"persistent": true
 	},
 	"permissions": [
 		"tabs",
