--- a/linksource/manifest.json
+++ b/linksource/manifest.json
@@ -6,7 +6,8 @@
 	"manifest_version": 2,
 	"homepage_url": "https://github.com/cielavenir/ctouch/",
 	"background": {
-		"scripts": ["linksource_bg.js"]
+		"scripts": ["linksource_bg.js"],
+		"persistent": true
 	},
 	"permissions": [
 		"contextMenus"
